--- a/index.html
+++ b/index.html
@@ -1,1 +1,44 @@
-hello world
+# College Course Management System
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>College Course Management</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>College Course Management System</h1>
+        <nav>
+            <ul>
+                <li><a href="#teacher">Teacher Dashboard</a></li>
+                <li><a href="#student">Student Dashboard</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section id="teacher">
+        <h2>Teacher Dashboard</h2>
+        <form id="courseForm">
+            <input type="text" id="courseName" placeholder="Course Name" required>
+            <input type="text" id="courseNumber" placeholder="Course Number" required>
+            <button type="submit">Add Course</button>
+        </form>
+        <ul id="courseList"></ul>
+    </section>
+
+    <section id="student">
+        <h2>Student Dashboard</h2>
+        <form id="studentForm">
+            <input type="text" id="studentName" placeholder="Your Name" required>
+            <button type="submit">Sign Up</button>
+        </form>
+        <h3>Your Courses</h3>
+        <ul id="studentCourses"></ul>
+    </section>
+
+    <script src="script.js"></script>
+</body>
+</html>
